--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
 body{background-color: lightgreen;}
 
-footer {
-	text-align: center;
-}
 
 fieldset {
 	padding: 10px;
 	margin: 20px;
 	width: 200px;
+	display: block;
+	float: left;
+}
+
+h2 {
+	display: block;
+	float: left;
+}
+
+* {outline: 1px solid red;}
+
+input.checklist {
+	display: block;
+}
+
+footer {
+	text-align: center;
+	display: block;
 }
