--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,4 @@
-body{background-color: lightgreen;}
+body{background-color: lightblue;}
 
 .steps {
 
@@ -8,9 +8,37 @@ body{background-color: lightgreen;}
 	margin: 10px;
 	margin-left: auto;
 	margin-right: auto;
-	width: 70%;
+	width: 75%;
 }
+
 
 h2 {
 	text-align: center;
+}
+
+IMG.displayed {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;  
+}
+
+#photo {
+	text-align: center;
+}
+
+div#intro {
+	font-family: courier;
+	margin: 5px;
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    background-color: green;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    font-size: 12px;
+  }
 }
